<resources>
    <string name="app_name">Lets Meet</string>
    <string name="hello_world">Device registered successfully</string>
    <string name="action_settings">Settings</string>
    <string name="registration_name_input">Name</string>
    <string name="registration_phone_input">Phone</string>
    <string name="register_button">Register</string>
    <string name="drawer_menu_title_upcoming_events">Upcoming Events</string>
    <string name="drawer_menu_title_all_events">All Events</string>
    <string name="create_event">Create Event</string>
    <string name="create_event_name">What is it about?</string>
    <string name="title_activity_create_event">Create New Event</string>
    <string name="new_event">Create New Event</string>
    <string name="create_event_notes">More details</string>
    <string name="contact_autocomplete">Invite Others</string>
    <string name="place_autocomplete">Where?</string>
    <string name="pending_verification_info">We are still trying to verify your phone number. If you would like change the number please retry registration again ..</string>
    <string name="register_again_button">Register again</string>
    <string name="list_events">View Events</string>
    <string name="title_activity_event_list">Upcoming Events</string>
    <string name="pick_a_time">Pick time</string>
    <string name="share_by_sms">Invite by SMS</string>
    <string name="share_other_channel">Share ..</string>
    <string name="users_not_registered_help_text">Following friends are not yet using Lets meet, invite them using sms?</string>
    <string name="title_activity_event_details">Event Details</string>
    <string name="edit_event">Edit</string>
    <string name="edit_event_title">Edit Event</string>
    <string name="edit_event_button">Done</string>
    <string name="pick_a_place">Pick a place</string>
    <string name="title_activity_maps">Map</string>
    <string name="change_date_time_button">Change</string>
    <string name="rsvp_yes">YES</string>
    <string name="rsvp_maybe">MAYBE</string>
    <string name="rsvp_no">NO</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_menu_title_send_feedback">Send Feedback</string>
    <string name="send_feedback_edittext">Feedback</string>
    <string name="send_feedback_button">Send</string>
    <string name="thank_you_for_feedback_text">Thank you for your feedback. .. More here ..</string>
    <string name="cancel_button">Skip</string>
    <string name="skip_button">skip</string>
    <string name="rsvp_help">Going?</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="must_add_guests">Add guests</string>
    <string name="event_time_text">When?</string>
    <string name="guests_list_header">Guests</string>
    <string name="edit_event_action">Edit</string>
    <string name="cancel_contact_selection_help">Cancel selection</string>
    <string name="contact_image_help">Contact image</string>
    <string name="guests_list_attending_header">attending?</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="send_message_button">Send Message</string>
    <string name="send_chat">Send</string>
    <string name="chat_message_help_text">Message</string>
    <string name="cannot_be_past">Event time can not be in past.</string>

</resources>
