<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rsvp_help"/>

    <Button
        android:id="@+id/rsvp_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rsvp_yes"/>

    <Button
        android:id="@+id/rsvp_maybe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rsvp_maybe"/>

    <Button
        android:id="@+id/rsvp_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rsvp_no"/>

</LinearLayout>