<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/registration_name"
        android:hint="@string/registration_name_input"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/registration_phone"
        android:hint="@string/registration_phone_input"
        android:inputType="phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/register_button"
        android:text="@string/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
