<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.letsmeet.android.activity.fragments.SendFeedbackFragment">

    <LinearLayout
        android:id="@+id/feedback_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/send_feedback_text"
            android:inputType="textAutoComplete|textCapSentences|textMultiLine"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:gravity="top"
            android:hint="@string/send_feedback_edittext"/>

        <Button
            android:id="@+id/send_feedback_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_feedback_button"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/thank_you_note"
        android:text="@string/thank_you_for_feedback_text"/>
</LinearLayout>
