<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="android.letsmeet.com.letsmeet.EventDetailsActivity">

    <Button
        android:id="@+id/edit_event_button"
        android:text="@string/edit_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/event_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_schedule_black_24dp"
            android:tint="@color/material_icon_light"
            android:contentDescription="@string/pick_a_time"
            style="@style/material_icon"/>

        <TextView
            android:id="@+id/event_details_date_time"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_place_black_24dp"
            android:tint="@color/material_icon_light"
            android:contentDescription="@string/pick_a_time"
            style="@style/material_icon"/>


        <TextView
            android:id="@+id/event_details_location"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:ellipsize="end"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_event_note_black_24dp"
            android:tint="@color/material_icon_light"
            android:contentDescription="@string/pick_a_time"
            style="@style/material_icon"/>

        <TextView
            android:id="@+id/event_details_notes"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:ellipsize="end"/>

    </LinearLayout>

    <com.letsmeet.android.widgets.rsvp.RsvpButtonsView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rsvp_buttons"
        android:layout_gravity="end">
    </com.letsmeet.android.widgets.rsvp.RsvpButtonsView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_people_black_24dp"
            android:tint="@color/material_icon_light"
            android:contentDescription="@string/pick_a_time"
            style="@style/material_icon"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/guests_list_header"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/guests_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/guests_list_content" />

</LinearLayout>
